--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 
-body {
+/*body {
     --color1: #ffffff;
     --color2: #ffffff;
     --color3: #ffffff;
@@ -18,7 +18,7 @@ body {
     --color3: hsla(315, 37%, 86%, 1);
     --color4: hsla(45, 73%, 98%, 1);
     --color5: hsla(224, 40%, 79%, 1); */
-    
+ /*   
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
     --gutter: 30px;
@@ -124,14 +124,43 @@ footer {
 
   }
 
+  */
 
+html {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-  input[type="radio"]:checked {
-      transform: scale(2);
-  }
+body {
+    background-color: wheat;
+    color: purple;
+    width: 800px;
+}
 
-  input[type="radio"]:checked + img {
-    transform: scale(2);
-    display: none;
+header {
+      text-align: center;
+      font-size: 4em;
+}
+
+.rules {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.game-play {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 450px;
+}
+
+input[type="radio"] {
+      transform: scale(1);
+}
+
+input[type="radio"]:checked + img {
+    transform: scale(1);
     border: 5px solid black;
 }
