--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,10 @@ div {
     text-align: center;
 }
 
+.conceal-image {
+    display: none;
+}
+
 .rules {
     display: flex;
     flex-direction: column;
